tests/ui/macros/macro-invalid-fragment-spec.stderr
error: invalid fragment specifier `foo`
  --> $DIR/macro-invalid-fragment-spec.rs:2:6
   |
LL |     ($x:foo) => ()
   |      ^^^^^^
   |
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`

error: aborting due to previous error

