tests/ui/macros/macro-invalid-fragment-spec.rs
macro_rules! foo(
    ($x:foo) => ()
    //~^ ERROR invalid fragment specifier
);

fn main() {
    foo!(foo);
}
